--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,6 @@ pandas==1.4.2
 scikit-learn==1.0.2
 Werkzeug==2.3.8
 
-# Optimized for Render (Linux) deployment
-tensorflow-cpu==2.8.0
-tflite-runtime==2.8.0
+# Updated versions that are available on Render
+tensorflow-cpu==2.14.0
+tflite-runtime==2.14.0
