--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,11 @@ Flask==2.1.1
 Flask-Cors==3.0.10
 gunicorn==20.1.0
 Pillow==9.1.1
-numpy==1.22.3
 pandas==1.4.2
 scikit-learn==1.0.2
 Werkzeug==2.3.8
 
-# Updated versions that are available on Render
+# Updated TensorFlow and removed numpy to resolve conflict
+# TensorFlow will now install its required numpy version automatically
 tensorflow-cpu==2.14.0
 tflite-runtime==2.14.0
